--- a/user-service.properties
+++ b/user-service.properties
@@ -1,6 +1,10 @@
-server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/users
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
