--- a/user-service.properties
+++ b/user-service.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.url=jdbc:postgresql://localhost:5432/users
 spring.datasource.username=
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
