--- a/user-service.properties
+++ b/user-service.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ms_users
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_user
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 
+management.endpoints.web.exposure.include=refresh
