--- a/user-service.properties
+++ b/user-service.properties
@@ -13,4 +13,5 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 
 management.endpoints.web.exposure.include=refresh
-management.endpoint.refresh.enabled=true
+custom.message=Changes Done!
+
