--- a/user-service.properties
+++ b/user-service.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ms_user
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_users
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,5 +13,3 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 
 management.endpoints.web.exposure.include=refresh
-custom.message=Done!
-
