--- a/user-service.properties
+++ b/user-service.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-#eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
 
 management.endpoints.web.exposure.include=refresh
