--- a/ressource-service.properties
+++ b/ressource-service.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_ressources
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+
+management.endpoints.web.exposure.include=refresh
