--- a/task-service.properties
+++ b/task-service.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
