--- a/notification-service.properties
+++ b/notification-service.properties
@@ -3,8 +3,11 @@
 ###############################################################################
 spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+management.endpoints.web.exposure.include=refresh
