--- a/notification-service.properties
+++ b/notification-service.properties
@@ -1,7 +1,7 @@
 ###############################################################################
 # DATABASE
 ###############################################################################
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_notifications
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
